...
            <TextInput
              style={styles.phoneInput}
              value={phone}
              onChangeText={setPhone}
              placeholder={t('auth.phonePlaceholder')}
              placeholderTextColor={Theme.textTertiary}
              testID="auth_phone_input"
              keyboardType="phone-pad"
              maxLength={9}
              accessibilityLabel="Telefon"
            />
          </View>

          <Text style={styles.label}>{t('auth.password')} *</Text>
          <TextInput
            testID="auth_password_input"
            style={styles.input}
            value={password}
            onChangeText={setPassword}
            placeholder={t('auth.passwordPlaceholder')}
            placeholderTextColor={Theme.textTertiary}
            secureTextEntry
...
